src/components/Tile.css
.Tile {
  cursor: pointer;
  width: 100%;
  height: 100%;
  background-color: #fff;
  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.29);
  border: 2px solid #fff;
}
.TileTitle {
  position: absolute;
  width: 100%;
  height: 40px;
  border-bottom: 1px solid #cdcdcd;
  background-color: #fff;
  overflow: hidden;
  cursor: grab;
  z-index: 999999;
}
.TileTitle:active {
  cursor: grabbing;
}
.TileTitle div {
  position: absolute;
  color: #747474;
  top: 12px;
  left: 10px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: calc(100% - 40px);
  font-size: 14px;
}
.TileHandle {
  position: absolute;
  right: 5px;
  top: 7px;
  color: #d8d8d8;
}

